added pricing section

--- a/index.html
+++ b/index.html
@@ -598,6 +598,106 @@
       </div>
     </section>
 
+    <!-- Pricing -->
+    <section id="pricing" class="pricing my-6">
+      <div class="container">
+        <div class="row mb-4">
+          <div
+            class="col-md-6 offset-md-3 d-flex flex-column align-items-center text-center"
+          >
+            <h5>
+              <span class="badge bg-primary rounded-0 text-uppercase"
+                >Pricing</span
+              >
+            </h5>
+            <h2 class="fw-bold">Flexible Pricing Options</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <!-- Pricing Column 1 -->
+          <div class="col-md-3">
+            <div class="card bg-secondary text-center rounded-0">
+              <div class="card-body">
+                <div class="xl-text fw-bold">$99</div>
+                <h4 class="card-title text-primary text-uppercase fw-bold mb-5">
+                  Standard
+                </h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
+                  error?
+                </p>
+                <ul class="list-unstyled lh-lg mt-5">
+                  <li class="text-uppercase fs-5 fw-bold">Subscribers List</li>
+                  <li class="text-uppercase fs-5 fw-bold">
+                    User Admin Control
+                  </li>
+                </ul>
+                <a
+                  href="#contact"
+                  class="btn btn-primary text-white mt-4 fw-bold"
+                  >Inquire</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- Pricing Column 2 -->
+          <div class="col-md-3">
+            <div class="card bg-secondary text-center rounded-0">
+              <div class="card-body">
+                <div class="xl-text fw-bold">$99</div>
+                <h4 class="card-title text-primary text-uppercase fw-bold mb-5">
+                  Standard
+                </h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
+                  error?
+                </p>
+                <ul class="list-unstyled lh-lg mt-5">
+                  <li class="text-uppercase fs-5 fw-bold">Subscribers List</li>
+                  <li class="text-uppercase fs-5 fw-bold">
+                    User Admin Control
+                  </li>
+                </ul>
+                <a
+                  href="#contact"
+                  class="btn btn-primary text-white mt-4 fw-bold"
+                  >Inquire</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <!-- Pricing Column 3 -->
+          <div class="col-md-3">
+            <div class="card bg-secondary text-center rounded-0">
+              <div class="card-body">
+                <div class="xl-text fw-bold">$99</div>
+                <h4 class="card-title text-primary text-uppercase fw-bold mb-5">
+                  Standard
+                </h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
+                  error?
+                </p>
+                <ul class="list-unstyled lh-lg mt-5">
+                  <li class="text-uppercase fs-5 fw-bold">Subscribers List</li>
+                  <li class="text-uppercase fs-5 fw-bold">
+                    User Admin Control
+                  </li>
+                </ul>
+                <a
+                  href="#contact"
+                  class="btn btn-primary text-white mt-4 fw-bold"
+                  >Inquire</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="js/replaceme.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/script.js"></script>
